# jerry

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CLAUDE.md  CLAUDE.md.backup  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  SOUNDTRACK.md  TOOL_REGISTRY.yaml  index.html  mkdocs.yml  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  sitemap.xml  tsconfig.json
.claude/: patterns  rules  settings.json  settings.local.json  statusline.py
.claude-plugin/: manifest.json  marketplace.json  plugin.json
.claude/agents/: TEMPLATE.md  adv-executor.md  adv-scorer.md  adv-selector.md  eng-architect.md  eng-backend.md  eng-devsecops.md  eng-frontend.md  eng-incident.md  eng-infra.md  eng-lead.md  eng-qa.md  eng-reviewer.md  eng-security.md  nse-architecture.md  nse-configuration.md  nse-explorer.md  nse-integration.md  nse-qa.md  nse-reporter.md  nse-requirements.md  nse-reviewer.md  nse-risk.md  nse-verification.md  orch-planner.md  orch-synthesizer.md  orch-tracker.md  orchestrator.md  ps-analyst.md  ps-architect.md  ps-critic.md  ps-investigator.md  ps-reporter.md  ps-researcher.md  ps-reviewer.md  ps-synthesizer.md  ps-validator.md  qa-engineer.md  red-exfil.md  red-exploit.md  (+22 more)
.claude/commands/: architect.md
.claude/hooks/: post_tool_use.py  pre_tool_use.py  subagent_stop.py
.claude/patterns/: PATTERN-CATALOG.md
.claude/rules/: architecture-standards.md  coding-standards.md  file-organization.md  markdown-navigation-standards.md  project-workflow.md  python-environment.md  tool-configuration.md
.context/guides/: EN-902-critic-report-iter2.md  EN-902-critic-report.md  architecture-layers.md  architecture-patterns.md  coding-practices.md  error-handling.md  skill-development.md  testing-practices.md
.context/patterns/: EN-903-creator-report.md  EN-903-critic-report-iter2.md  PATTERN-CATALOG.md  README.md  aggregate_pattern.py  command_handler_pattern.py  domain_event_pattern.py  exception_hierarchy_pattern.py  repository_pattern.py  value_object_pattern.py
.context/rules/: agent-development-standards.md  agent-routing-standards.md  architecture-standards.md  coding-standards.md  error-handling-standards.md  file-organization.md  mandatory-skill-usage.md  markdown-navigation-standards.md  mcp-tool-standards.md  project-workflow.md  python-environment.md  quality-enforcement.md  skill-standards.md  testing-standards.md  tool-configuration.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  feature-request.yml  linux-compatibility.yml  macos-compatibility.yml  windows-compatibility.yml
.github/workflows/: ci.yml  docs.yml  jerry-agent-schema-validation.yml  pat-monitor.yml  release.yml  version-bump.yml
.jerry/checkpoints/: cx-001.json  cx-002.json  cx-003.json  cx-004.json  cx-005.json  cx-006.json  cx-007.json  cx-008.json  cx-009.json  cx-010.json  cx-011.json  cx-012.json  cx-013.json  cx-014.json  cx-015.json  cx-016.json  cx-017.json  cx-018.json  cx-019.json  cx-020.json  cx-021.json  cx-022.json  cx-023.json  cx-024.json  cx-025.json  cx-026.json  cx-027.json  cx-028.json  cx-029.json  cx-030.json  cx-031.json  cx-032.json  cx-033.json  cx-034.json  cx-035.json  cx-036.json
BOOTSTRAP/: index.html
CLAUDE-MD-GUIDE/: index.html
INSTALLATION/: index.html
blog/: index.html
blog/why-structured-prompting-works/: index.html
commands/: architect.md  release.md
docs/: BOOTSTRAP.md  CLAUDE-MD-GUIDE.md  INSTALLATION.md  PLAN.md  WORKTRACKER.md  index.md
docs/adrs/: ADR-001-agent-architecture.md  ADR-001-amendment-001-python-preprocessing.md  ADR-002-artifact-structure.md  ADR-003-bidirectional-linking.md  ADR-004-file-splitting.md  ADR-005-agent-implementation.md  ADR-006-mindmap-pipeline-integration.md
docs/analysis/: work-025-e-001-model-selection-effort.md  work-026-e-002-transcript-skill-gap-analysis.md
docs/blog/: .authors.yml  index.md
docs/decisions/: ADR-031-knowledge-architecture.md  ADR-033-unified-km-architecture.md
docs/design/: ADR-PROJ007-001-agent-design.md  ADR-PROJ007-002-routing-triggers.md  ADR-PROJ012-001-single-file-architecture.md  PYTHON-ARCHITECTURE-STANDARDS.md  saucer-boy-visual-identity.md
docs/experience/: CASESTUDY-PROJ012-merge-regression.md
docs/governance/: AGENT_CONFORMANCE_RULES.md  BEHAVIOR_TESTS.md  JERRY_CONSTITUTION.md
docs/knowledge/: DISCOVERIES_EXPANDED.md  agent-pattern-taxonomy.md  diataxis-framework.md  jerry-vs-anthropic-best-practices.md  saucer-boy-persona.md  skill-development-best-practices.md
docs/plans/: PLAN.md  WORKTRACKER_PROPOSAL.md
docs/playbooks/: PLUGIN-DEVELOPMENT.md  orchestration.md  problem-solving.md  transcript.md
docs/proposals/: PS_EXPORT_DOMAIN_ALIGNMENT.md
docs/research/: GRAPH_DATA_MODEL_ANALYSIS.md  TOON_FORMAT_ANALYSIS.md  adversarial-deep-dives.md  index.md  (+11 more)
hooks/: context-stop-gate.py  hooks.json  hooks.json.backup  pre-compact.py  pre-tool-use.py  session-start.py  subagent-stop.py  user-prompt-submit.py
overrides/: main.html
projects/: README.md
research/: index.html
runbooks/: RUNBOOK-001-plugin-regression-playbook.md
schemas/: agent-definition-v1.schema.json  agent-governance-v1.schema.json  hooks.schema.json  marketplace.schema.json  plugin.schema.json
scripts/: __init__.py  apply_spdx_headers.py  bootstrap_context.py  check_agent_conformance.py  check_architecture_boundaries.py  check_hard_rule_ceiling.py  check_markdown_schemas.py  check_spdx_headers.py  compose_agent_template.py  fix_governance.py  fix_governance_schema.py  jerry-validate-agent-schemas.py  post_tool_use.py  pre_tool_use.py  requirements-dev.txt  requirements.txt  session_start.py  session_start_hook.py  session_start_hook.py.retired  st007_migration_comparison.py  subagent_stop.py  sync_versions.py  test_combined_hook_output.py  transform_agents.py  validate_plugin_manifests.py  validate_schemas.py  validate_templates.py
search/: search_index.json
src/: __init__.py  bootstrap.py  index.ts  skill.ts  types.ts
tests/: conftest.py
(+5727 files in other folders)
