[project]
name = "jerry"
version = "0.1.0"
description = "A framework for behavior and workflow guardrails with knowledge accrual"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Jerry Framework Contributors" }
]
keywords = [
    "claude-code",
    "ai-agent",
    "workflow",
    "guardrails",
    "hexagonal-architecture",
    "domain-driven-design"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

# Zero external dependencies for core
# Libraries added here should be pre-installed in Claude Code Web environment
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "filelock>=3.12.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-archon>=0.0.6",
    "pytest-bdd>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
jerry = "src.interface.cli.main:main"
jerry-session-start = "src.interface.cli.session_start:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B017",  # pytest.raises(Exception) - used intentionally for frozen dataclass tests
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "happy-path: marks tests as happy path scenarios",
    "negative: marks tests as negative/error scenarios",
    "edge-case: marks tests as edge case scenarios",
    "boundary: marks tests as boundary value scenarios",
]
